--- a/meno.css
+++ b/meno.css
@@ -1,89 +1,33 @@
 @font-face 
 {
     font-family: 'mrz';
-    src: url('font/IranNastaliq.woff') format('woff');
+    src: url('Naskh Titr Shadow_MRT.ttf') format('ttf');
 }
 body
 {
     font-family: tahoma;
     direction: rtl;
-    margin: 0px;
-}
-ul
-{
-    background-color: rgb(171, 110, 228);
-    padding: 0px;  
-    
-}
+  
+     background-color: antiquewhite;
+     
+
 li
 {
-    display: inline;
-   position: relative;
-    
-}
-li a
-{
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-    padding: 20px;
-}
-li a:hover
-{
-    color: black;
-    background-color:red;
-}
- li ul
- {
-    position: absolute;
-    width: 90px;
-    right: 0px;
-    overflow: hidden;
-    visibility: hidden;
-    box-shadow: -2px 3px  5px 5px  black;
    
- }
- li ul li a
- {
-display: block;
-background-color:gold;
-color: rgb(22, 194, 185);
-
- }
-li:hover ul
-{
-visibility: visible;
-}
-li ul li a:hover
-{
-    background-color: greenyellow ;
-}
-div
-{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-
-}
-div:hover
-{
-    width: 600px;
- 
+    font-size: 40px;
+    margin: 15px;
+    color: rgb(131, 80, 5);
     
 }
-.tr1
+.b
 {
-    transition: width 5s linear 0s ;
+text-align: center;
+font-size: 60px;
+color: chocolate;
 }
-.tr2
+.b2
 {
-    transition: width 5s ease-in 0s ;
-}
-.tr3
-{
-    transition: width 5s ease-out 0s ;
-}
-.tr4
-{
-    transition: width 5s ease-in-out 0s ;
+margin:15px;
+font-size: 40px;
+color: chocolate;
 }
